--- a/SplashPage/css/style.css
+++ b/SplashPage/css/style.css
@@ -1,76 +1,77 @@
 body {
-	margin: 0;
+    margin: 0;
 }
 
-p, a {
-	font-family: 'Open Sans', sans-serif;
+p,
+a {
+    font-family: 'Open Sans', sans-serif;
 }
 
 #icon-container {
-	height: 400px;
-	width: 100%;
-	text-align: center;
-	float: left;
-} 
+    height: 400px;
+    width: 100%;
+    text-align: center;
+    float: left;
+}
 
 #navbar-container {
-	height: 450px;
-	width: 670px;
-	float: left;
-	text-align: left;
+    height: 450px;
+    width: 670px;
+    float: left;
+    text-align: left;
 }
 
 .pages {
-	height:700px;
-	width: 100%;
-	float: left;
+    height: 700px;
+    width: 100%;
+    float: left;
 }
 
 .background-page1 {
-	background-color: white;
+    background-color: white;
 }
 
 .background-page2 {
-	background-color: lightblue;
+    background-color: lightblue;
 }
 
 .background-page3 {
-	background-color: salmon;
+    background-color: salmon;
 }
 
 .background-page4 {
-	background-color: lightyellow;
+    background-color: lightyellow;
 }
 
 .spacing-30 {
-	height: 30px;
-	width: 100%;
-	float: left;
+    height: 30px;
+    width: 100%;
+    float: left;
 }
 
 .spacing-80 {
-	height: 80px;
-	width: 100%;
-	float: left;
+    height: 80px;
+    width: 100%;
+    float: left;
 }
 
 .spacing-100 {
-	height: 100px;
-	width: 100%;
-	float: left;
-	margin: 30px;
+    height: 100px;
+    width: 100%;
+    float: left;
+    margin: 30px;
 }
 
 .spacing-200 {
-	margin-top: 200px;
-	float: left;
-	width: 100%;
+    margin-top: 200px;
+    float: left;
+    width: 100%;
 }
 
 .side-by-side-container {
-	height: 300px;
-	width: 25%;
-	float: left;
+    height: 300px;
+    width: 25%;
+    float: left;
 }
 
 .button {
@@ -87,66 +88,63 @@ p, a {
 }
 
 .icon {
-	height: 300px;
-	width: 300px;	
-	opacity: 1;
-	filter: alpha(opacity=100);
-	margin: auto;
-	background: url(../img/icon.png);
-	background-size: 100% 100%;
-	margin-top: 5%;
+    height: 300px;
+    width: 300px;
+    opacity: 1;
+    filter: alpha(opacity=100);
+    margin: auto;
+    background: url(../img/icon.png);
+    background-size: 100% 100%;
+    margin-top: 5%;
 }
 
 .ari {
-	height: 300px;
-	width: 100%;
-	display: inline-block;
-	background-repeat: no-repeat;
-	float: left;
-	opacity: 1; 
-	filter: alpha(opacity=100); 
-	background: url(../img/ari.jpg) no-repeat; 
-	background-size: 100% 100%;
+    height: 300px;
+    width: 100%;
+    display: inline-block;
+    background-repeat: no-repeat;
+    float: left;
+    opacity: 1;
+    filter: alpha(opacity=100);
+    background: url(../img/ari.jpg) no-repeat;
+    background-size: 100% 100%;
 }
 
 .brian {
-	height: 300px;
-	width: 100%;
-	display: inline-block;
-	background-repeat: no-repeat;
-	float: left;
-	opacity: 1; 
-	filter: alpha(opacity=100); 
-	background: url(../img/brian.jpg) no-repeat; 
-	background-size: 100% 100%;
+    height: 300px;
+    width: 100%;
+    display: inline-block;
+    background-repeat: no-repeat;
+    float: left;
+    opacity: 1;
+    filter: alpha(opacity=100);
+    background: url(../img/brian.jpg) no-repeat;
+    background-size: 100% 100%;
 }
 
 .juan {
-	height: 300px;
-	width: 100%;
-	display: inline-block;
-	background-repeat: no-repeat;
-	float: left;
-	opacity: 1; 
-	filter: alpha(opacity=100); 
-	background: url(../img/juan.jpg) no-repeat; 
-	background-size: 100% 100%;
+    height: 300px;
+    width: 100%;
+    display: inline-block;
+    background-repeat: no-repeat;
+    float: left;
+    opacity: 1;
+    filter: alpha(opacity=100);
+    background: url(../img/juan.jpg) no-repeat;
+    background-size: 100% 100%;
 }
 
 .justin {
-	height: 300px;
-	width: 100%;
-	display: inline-block;
-	background-repeat: no-repeat;
-	float: left;
-	opacity: 1; 
-	filter: alpha(opacity=100); 
-	background: url(../img/justin.jpg) no-repeat; 
-	background-size: 100% 100%;
+    height: 300px;
+    width: 100%;
+    display: inline-block;
+    background-repeat: no-repeat;
+    float: left;
+    opacity: 1;
+    filter: alpha(opacity=100);
+    background: url(../img/justin.jpg) no-repeat;
+    background-size: 100% 100%;
 }
-
-
-
 
 ul {
     list-style-type: none;
@@ -161,47 +159,47 @@ li {
 }
 
 .font-110 {
-	font-size: 110%;
+    font-size: 110%;
 }
 
 .font-350 {
-	font-size: 350%;
-	text-align: center;
-	margin-left: 10%;
-	margin-right: 10%;
+    font-size: 350%;
+    text-align: center;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .font-140 {
-	font-size: 140%;
-	font-family: 'Open Sans', sans-serif;
+    font-size: 140%;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .font-160 {
-	width: 330px;
-	font-size: 160%;
-	margin-top: 100px;
-	margin-left: 3%;
-	float: left;
-	color: white;
+    width: 330px;
+    font-size: 160%;
+    margin-top: 100px;
+    margin-left: 3%;
+    float: left;
+    color: white;
 }
 
 .font-250 {
-	font-size: 250%;
-	text-align: center;
+    font-size: 250%;
+    text-align: center;
 }
 
 .font-400 {
-	font-size: 400%;
-	text-align: center;
+    font-size: 400%;
+    text-align: center;
 }
 
 .font-500 {
-	font-size: 500%;
+    font-size: 500%;
     color: #2f4f4f;
 }
 
 .right-font {
-	color: rgba(0, 0, 0, 0.5);	
+    color: rgba(0, 0, 0, 0.5);
 }
 
 .opacity {
@@ -209,195 +207,194 @@ li {
 }
 
 .float-right {
-	float: right;
+    float: right;
 }
 
 .margin-left-2 {
-	margin-left: 2%;
+    margin-left: 2%;
 }
 
 .word-spacing {
-	word-spacing: 2px;
+    word-spacing: 2px;
 }
 
 .margin-left-20 {
-	margin-left: 20%;
+    margin-left: 20%;
 }
 
 .margin-left-50px {
-	margin-left: 50px
+    margin-left: 50px
 }
 
 .names-container {
-	height: 60px;
-	width: 100%;
-	clear: right;
+    height: 60px;
+    width: 100%;
+    clear: right;
 }
 
 hr {
-	clear: left;
-
+    clear: left;
 }
 
 .quote-container {
-	width: 100%;
-	margin: 90px 100px 150px 70px;
-	float: left;
+    width: 100%;
+    margin: 90px 100px 150px 70px;
+    float: left;
 }
 
 .centering {
-	width: 60%;
-	margin: auto;
+    width: 60%;
+    margin: auto;
     display: block;
 }
 
 .pic-container-1 {
-	width: 25%;
-	height: 520px;
-	background: url("../img/andrea.jpg"); 
-	background-size: cover;
-	background-size: 100% 100%;
-	float: left;
+    width: 25%;
+    height: 520px;
+    background: url("../img/andrea.jpg");
+    background-size: cover;
+    background-size: 100% 100%;
+    float: left;
 }
 
 .pic-container-2 {
-	width: 25%;
-	height: 520px;
-	background: url("../img/cheryl2.jpg");
-	background-size: cover;
-	background-size: 100% 100%;
-	float: left;
+    width: 25%;
+    height: 520px;
+    background: url("../img/cheryl2.jpg");
+    background-size: cover;
+    background-size: 100% 100%;
+    float: left;
 }
 
 .pic-container-3 {
-	width: 25%;
-	height: 520px;
-	background: url("../img/daniel.jpg");
-	background-size: cover; 
-	background-size: 100% 100%;
-	float: left;
+    width: 25%;
+    height: 520px;
+    background: url("../img/daniel.jpg");
+    background-size: cover;
+    background-size: 100% 100%;
+    float: left;
 }
 
 .pic-container-4 {
-	width: 25%;
-	height: 520px;
-	background: url("../img/matt.jpg");
-	background-size: cover;
-	background-size: 100% 100%;
-	float: left;
+    width: 25%;
+    height: 520px;
+    background: url("../img/matt.jpg");
+    background-size: cover;
+    background-size: 100% 100%;
+    float: left;
 }
 
 .pic-container-5 {
-	width: 25%;
-	height: 520px;
-	background: url("../img/steve.jpg");
-	background-size: cover; 
-	background-size: 100% 100%;
-	float: left;
+    width: 25%;
+    height: 520px;
+    background: url("../img/steve.jpg");
+    background-size: cover;
+    background-size: 100% 100%;
+    float: left;
 }
 
 .pic-container-6 {
-	width: 25%;
-	height: 520px;
-	background: url("../img/shant21.jpg");
-	background-size: cover;
-	background-size: 100% 100%;
-	float: left;
+    width: 25%;
+    height: 520px;
+    background: url("../img/shant21.jpg");
+    background-size: cover;
+    background-size: 100% 100%;
+    float: left;
 }
 
 .pic-container-7 {
-	width: 25%;
-	height: 520px;
-	background: url("../img/alex2.jpg");
-	background-size: cover; 
-	background-size: 100% 100%;
-	float: left;
+    width: 25%;
+    height: 520px;
+    background: url("../img/alex2.jpg");
+    background-size: cover;
+    background-size: 100% 100%;
+    float: left;
 }
 
 .pic-container-8 {
-	width: 25%;
-	height: 520px;
-	background: url("../img/cheryl2.jpg");
-	background-size: cover; 
-	background-size: 100% 100%;
-	float: left;
+    width: 25%;
+    height: 520px;
+    background: url("../img/cheryl2.jpg");
+    background-size: cover;
+    background-size: 100% 100%;
+    float: left;
 }
 
 .red-line {
-	width: 5px;
-	border-top: 17px;
-	border-color: red;
-	float: left;
+    width: 5px;
+    border-top: 17px;
+    border-color: red;
+    float: left;
 }
 
 .footer {
-	width: 100%;
-	height: 325px;
-	background-color: #1f2424;
-	float: left;
+    width: 100%;
+    height: 325px;
+    background-color: #1f2424;
+    float: left;
 }
 
 .long-list-container-1 {
-	height: 175px;
-	width: 15%;
-	float: left;
-	margin-top: 80px;
-	margin-left: 200px;
-	line-height: 50%;
-	color: white;
+    height: 175px;
+    width: 15%;
+    float: left;
+    margin-top: 80px;
+    margin-left: 200px;
+    line-height: 50%;
+    color: white;
 }
 
 .long-list-container-2 {
-	height: 175px;
-	width: 15%;
-	float: left;
-	margin-top: 80px;
-	margin-left: -40px;
-	line-height: 50%;
-	color: white;
+    height: 175px;
+    width: 15%;
+    float: left;
+    margin-top: 80px;
+    margin-left: -40px;
+    line-height: 50%;
+    color: white;
 }
 
 .long-list-container-3 {
-	height: 175px;
-	width: 15%;
-	float: left;
-	margin-top: 80px;
-	margin-left: -40px;
-	line-height: 50%;
-	color: white;
+    height: 175px;
+    width: 15%;
+    float: left;
+    margin-top: 80px;
+    margin-left: -40px;
+    line-height: 50%;
+    color: white;
 }
 
 .metalab-sizing {
-	height: 75px;
-	width: 118px;
+    height: 75px;
+    width: 118px;
 }
 
 .logo-spacing {
-	margin-top: 75px;
+    margin-top: 75px;
 }
 
 .logo-positioning {
-	margin-top: 100px;
-	margin-left: 160px;
-	float: left;
+    margin-top: 100px;
+    margin-left: 160px;
+    float: left;
 }
 
 .inverted {
-	filter: invert(100%);
+    filter: invert(100%);
 }
 
 .red-bar {
-	background-color: #d00d20;
-	height: 2px;
-	width: 20px;
-	clear: right;
-	margin-left: 50px;
+    background-color: #d00d20;
+    height: 2px;
+    width: 20px;
+    clear: right;
+    margin-left: 50px;
 }
 
 .quote-red-bar {
-	background-color: #df8686;
-	height: 3px;
-	width: 20px;
-	clear: right;
-	margin-left: 340px;
+    background-color: #df8686;
+    height: 3px;
+    width: 20px;
+    clear: right;
+    margin-left: 340px;
 }
