--- a/SplashPage/css/style.css
+++ b/SplashPage/css/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    background-color: #2196F3;
 }
 
 p,
@@ -22,7 +23,7 @@ a {
 }
 
 .pages {
-    height: 700px;
+    height: 760px;
     width: 100%;
     float: left;
 }
